tests/pos/namespace-type/foo.stk
namespace foo

import bar

type B = Int

fun triple(x: bar.A): bar.A = bar.double x + x

fun main =
  bar.quadruple 10 p
