tests/neg/namespace-redefintion3/main.stk
namespace test.double

fun main = 10 p
